Slide Text Handler done

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
         </div>
 
         <!-- Carousel Containers -->
-        <div class="slide relative min-w-full min-h-full bg-cyan-400 z-10">
-            
-        </div>
-        <div class="slide relative min-w-full min-h-full bg-rose-400 z-10"></div>
-        <div class="slide relative min-w-full min-h-full bg-lime-400 z-10"></div>
-        <div class="slide relative min-w-full min-h-full bg-orange-400 z-10"></div>
+        <div class="slide bg-cyan-400"></div>
+        <div class="slide bg-rose-400"></div>
+        <div class="slide bg-lime-400"></div>
+        <div class="slide bg-orange-400"></div>
         <!-- Carousel Containers Ends -->
 
         <!-- Right Arrow -->
@@ -43,6 +41,7 @@
             </svg>
         </div>
     </div>
+    <script src="./scripts/slide.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 
