Added bg changer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="slide bg-rose-400"></div>
         <div class="slide bg-lime-400"></div>
         <div class="slide bg-orange-400"></div>
+        <div class="slide bg-pink-400"></div>
         <!-- Carousel Containers Ends -->
 
         <!-- Right Arrow -->
