Added color backup system in localstorage

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </div>
 
         <!-- Carousel Containers -->
-        <div class="slide bg-cyan-400"></div>
-        <div class="slide bg-rose-400"></div>
-        <div class="slide bg-lime-400"></div>
-        <div class="slide bg-orange-400"></div>
-        <div class="slide bg-pink-400"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
         <!-- Carousel Containers Ends -->
 
         <!-- Right Arrow -->
